test/scc/pp/errors/007.a
007.t:1:11: error: '##' cannot appear at either end of macro expansion